--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,9 @@
         <div><input type="password" id = "password" name="password1" 
             pattern= "(?=.*\d)(?=.*[a-ö])(?=.*[A-Ö]).{6,}"
             minlength="6" maxlength="16" placeholder="Salasana" 
-            title="Vähintään 6 merkkiä ja yksi jokaista: pienikirjain, isokirjain, numero" required></div>
+            title="Vähintään 6 merkkiä ja yksi jokaista: pienikirjain, isokirjain, numero" required>
+        </div>
+        <div><p>6 merkkiä, sekä yksi pienikirjain, isokirjain ja numero</p></div>
         <div><label for="password">Salasana uudestaan:</label></div>
         <div><input type="password" id = "password" name="password2" placeholder="Salasana uudestaan"required></div>
         <div><input id="button" type="submit" value="Luo tunnus"></div>
