--- a/templates/register.html
+++ b/templates/register.html
@@ -25,7 +25,7 @@
             minlength="6" maxlength="16" placeholder="Salasana" 
             title="Vähintään 6 merkkiä ja yksi jokaista: pienikirjain, isokirjain, numero" required>
         </div>
-        <div><p>6 merkkiä, sekä yksi pienikirjain, isokirjain ja numero</p></div>
+        <div><p>Min 6 merkkiä sisältäen ison ja pienen kirjaimen, sekä numeron</p></div>
         <div><label for="password">Salasana uudestaan:</label></div>
         <div><input type="password" id = "password" name="password2" placeholder="Salasana uudestaan"required></div>
         <div><input id="button" type="submit" value="Luo tunnus"></div>
