kierros tarkennus pelivalikkoon

--- a/templates/indexseason.html
+++ b/templates/indexseason.html
@@ -22,6 +22,8 @@
                             <option value="2"> 2
                             <option value="3"> 3       
                             </select>    
+        <div><p>2h vuorolla ehtii pelata 6 henkilöllä 1 kierroksen</p></div>
+        <div><p>2h vuorolla ehtii pelata 5 henkilöllä 2 kierrosta</p></div>
     </div>
     <div class="scorebutton">
         <input id= "gamestart" type="submit" value="Aloita pelit">
