--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,9 @@
 {% block title %}Kirjautuminen{% endblock %}
 {% block navstart %}
 <div class="navbanner">
-    <a class ="navlinks1" href="/gameindex">Pelit</a>
-    <a class ="navlinks2" href="/stats">Tilastot</a>
-    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
+    <a class ="navlinks1" >Pelit</a>
+    <a class ="navlinks2" >Tilastot</a>
+    <a class ="navlinks3" >Pelaajat</a>
     <a class ="navlinks4-select" href="/login">Login</a>
 </div>
 {% endblock %}
