uusi tilastojen esitys

--- a/templates/americano.html
+++ b/templates/americano.html
@@ -38,6 +38,7 @@
     {% endfor %}      
     <div class="scorebutton">
         <input type="hidden" id="hide" name=tournament_id value= "{{ t_id }}">
+        <input type="hidden" id="hide" name=seasonround value= "0">
         <input id="scorebutton" type="submit" value="Tallenna päivän tulokset">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </div>
