--- a/templates/indexamericano.html
+++ b/templates/indexamericano.html
@@ -9,7 +9,7 @@
 
 <div class="h2">Keksi turnaukselle nimi</div>
 <form class = "tournament-name" action="/americano" method="POST" onsubmit="return americanocheck(this)">
-    <div><input id ="username" type="text" name="tournament_name" minlength="4" maxlength="16"
+    <div><input type="text" name="tournament_name" minlength="4" maxlength="16"
          pattern="[A-Öa-ö0-9]+" placeholder="kirjaimia tai numeroita" required></div>
     <div class="h2">Valitse päivän pelaajat (vähintään 8)</div>
     <div class="playerboard">
