--- a/templates/dayscores.html
+++ b/templates/dayscores.html
@@ -10,11 +10,21 @@
 {% endblock %}
 {% block content %}
 
-<div class="h2-seasonstats">Päivän tulokset</div>
+<div class="h2-americano-points">Päivän tulokset</div>
 <div class="dayscores">
     {% for d in day_podium %}
         <div class = "name">{{ d[0] }} </div>
         <div class = "points">{{ d[1] }} </div>
     {% endfor%}
 </div>
+<div class = "h2-americano-points"> Pelit </div>
+{% for g in games %}
+    <div class="gameboard">
+        <div class = "team"> {{ g[0] }} / {{ g[2] }}</div>
+        <div class = "team"> {{ g[4] }} / {{ g[6] }} </div>
+        <div class = "points"> {{ g[1] }}</div>
+        <div class = "points"> {{ g[5] }}</div>
+    </div>
+{% endfor %} 
+
 {% endblock %}
