--- a/templates/games.html
+++ b/templates/games.html
@@ -41,6 +41,7 @@
 {% endfor %}    
     <div class="scorebutton">
         <input type="hidden" id="hide" name=tournament_id value= "1">
+        <input type="hidden" id="hide" name=seasonround value= " {{ sr }} ">
         <input id="scorebutton" type="submit" value="Tallenna päivän tulokset">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </div>
