--- a/templates/scorestats.html
+++ b/templates/scorestats.html
@@ -3,25 +3,25 @@
 <div class="navbanner1">
     <a class ="navlinks1-select" href="/stats">Talvikausi</a>
     <a class ="navlinks4" href="/americanostats">Americano</a>
-    <a class ="navlinks2" href="/allgames">Pelit</a>
+    <a class ="navlinks2" href="/allgames">Pelihistoria</a>
 </div>
 {% endblock %}
 {% block statisticcontent %}
 <div class="h2-seasonstats">KAUSITILASTO</div>
 <div class="podiumboard">
     <div></div>
-    <div class = "h2stats">Piste voitot</div>
-    <div class = "h2stats">Piste häviöt</div>
     <div class = "h2stats">Peli voitot</div>
     <div class = "h2stats">Peli häviöt</div>
+    <div class = "h2stats">Piste voitot</div>
+    <div class = "h2stats">Piste häviöt</div>
     <div class = "h2stats">Pelit</div>
 
     {% for p in podium %}
-        <div class = "name"> {{ p[0] }}</div>
-        <div class = "points"> {{ p[1] }}</div>
-        <div class = "points"> {{ p[2] }}</div>
+        <div class = "name"> {{ p[0] }}</div> 
         <div class = "points"> {{ p[3] }}</div>
         <div class = "points"> {{ p[4] }}</div>
+        <div class = "points"> {{ p[1] }}</div>
+        <div class = "points"> {{ p[2] }}</div>
         <div class = "points"> {{ p[3]+p[4] }}</div>
 
     {% endfor %}   
